[tool.poetry]
name = "rigid-ori-animation"
version = "0.3.1"
description = ""
authors = ["Author <author@author>"]
readme = "README.md"
packages = [{include = "rigid_ori_animation"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core", "setuptools_scm"]
build-backend = "poetry.core.masonry.api"

# Dynamic versioning
dynamic = ["version"]

# rigid_ori_animation/__init__.py の version を参照する
[tool.setuptools.dynamic]
#version = {attr = "rigid_ori_animation.version"}
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

# パッケージ作成時に指定のファイルにバージョン情報を書き込む
[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "rigid_ori_animation/_version.py"